# investor_agent

./: .env.example  .gitignore  README.md  arklex_demo_spec.md  pyproject.toml  requirements.txt  test_day1.sh  test_day2.sh  test_day3.sh
data/: test_questions.json
data/chroma_db/404ef0d8-3e82-45e4-bb32-bd6d9fe90785/: index_metadata.pickle
src/agent/: __init__.py  research_agent.py
src/api/: __init__.py  main.py  models.py
src/data/: download_bank_outlooks.py  download_fomc_minutes.py  download_sec_10k.py  download_ubs_reports.py  ingest_reports.py
src/eval/: __init__.py  compare_evaluators.py  llm_judge.py  openai_evals_runner.py  run_evaluation.py  test_runner.py
src/rag/: __init__.py  test_retrieval.py  vector_store.py
src/tools/: __init__.py  rag_retrieval.py
src/ui/: __init__.py  app.py  chat_interface.py
